# 2d-solar-system-simulator

./: 2body.essa  8body.essa  CMakeLists.txt  README.md  solar.essa
.github/workflows/: linux.yml
assets/layouts/: Splash.eml
docs/: BuildInstructions.md  essa-parallelization.cpp
docs/PySSA/: Index.md  Object.md  SimulationView.md  World.md
src/: CanvasMode.cpp  ConfigLoader.cpp  ConfigLoader.hpp  Constants.hpp  CreateObjectGUI.cpp  EssaCreateObject.cpp  EssaCreateObject.hpp  EssaGUI.cpp  EssaGUI.hpp  EssaSettings.cpp  EssaSettings.hpp  FocusedObjectGUI.cpp  FocusedObjectGUI.hpp  History.cpp  History.hpp  Matrix.hpp  Moon.cpp  Moon.hpp  Object.cpp  Object.hpp  ObjectHistory.cpp  ObjectHistory.hpp  Planet.cpp  Planet.hpp  SimulationView.cpp  SimulationView.hpp  SolarSystem.cpp  Trail.cpp  Trail.hpp  Transform.cpp  Transform.hpp  Vector2.hpp  Vector3.hpp  View.hpp  World.cpp  World.hpp  WorldShader.cpp  WorldShader.hpp  main.cpp
src/config/: Lexer.cpp  Lexer.hpp
src/essagui/: CanvasMode.cpp  EssaCanvasMode.cpp  EssaCanvasMode.hpp  EssaCreateObject.cpp  EssaCreateObject.hpp  EssaGUI.cpp  EssaGUI.hpp  EssaSettings.cpp  EssaSettings.hpp  EssaSplash.cpp  EssaSplash.hpp  FPSCounter.cpp  FPSCounter.hpp  FocusedObjectGUI.cpp  FocusedObjectGUI.hpp  ModifyObject.cpp  ModifyObject.hpp  PythonREPL.cpp  PythonREPL.hpp  SimulationInfo.cpp  SimulationInfo.hpp
src/gfx/: RoundedEdgeRectangleShape.cpp  RoundedEdgeRectangleShape.hpp
src/glwrapper/: Color.hpp  Helpers.cpp  Helpers.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/gui/: Application.cpp  Application.hpp  ArrowButton.cpp  ArrowButton.hpp  Button.cpp  Button.hpp  CMakeLists.txt  ColorPicker.cpp  ColorPicker.hpp  Console.cpp  Console.hpp  Container.cpp  Container.hpp  CreateObjectGUI.cpp  Date.hpp  DateTextbox.cpp  DateTextbox.hpp  Datebox.cpp  Datebox.hpp  FileExplorer.cpp  FileExplorer.hpp  FilePrompt.cpp  FilePrompt.hpp  Frame.cpp  Frame.hpp  FreeButton.cpp  FreeButton.hpp  GUI.cpp  GUI.hpp  HideShowButton.cpp  HideShowButton.hpp  ImageButton.cpp  ImageButton.hpp  ListView.cpp  ListView.hpp  MessageBox.cpp  MessageBox.hpp  NotifyUser.hpp  Prompt.cpp  PythonREPL.cpp  (+38 more)
src/math/: Matrix.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Transform.cpp  Transform.hpp  Vector3.hpp
src/pyssa/: Environment.cpp  Environment.hpp  Object.cpp  Object.hpp  TupleParser.hpp  WrappedObject.cpp  WrappedObject.hpp
src/util/: Error.h  SimulationClock.cpp  SimulationClock.hpp  SourceLocation.hpp  Try.h  UnitDisplay.cpp  UnitDisplay.hpp  Units.hpp
tests/: .~lock.accuracy.ods#  accuracy.ods  analyze.py  test.sh
worlds/: 2body.essa  8body.essa  jupiter_system.essa  light_test.essa  solar.essa  trail_test.essa
