add_library(essa-gui
    Application.cpp
    ArrowButton.cpp
    Button.cpp
    ColorPicker.cpp
    Console.cpp
    Container.cpp
    Datebox.cpp
    EventLoop.cpp
    FileExplorer.cpp
    Frame.cpp
    ImageButton.cpp
    ListView.cpp
    MessageBox.cpp
    Prompt.cpp
    SettingsMenu.cpp
    SelectWidget.cpp
    Slider.cpp
    TabWidget.cpp
    Textbox.cpp
    TextButton.cpp
    Textfield.cpp
    Tooltip.cpp
    ToolWindow.cpp
    ValueSlider.cpp
    Widget.cpp
    WidgetTreeRoot.cpp
)

target_link_libraries(
    essa-gui
    sfml-graphics
)

setup_target(essa-gui)
